# django-test-project

./: .gitleaks.toml  .pre-commit-config.yaml  .pylintrc  db.sqlite3  pyproject.toml  requirements.txt  sonar-project.properties
.git-hooks/: pre-push-pytest.sh
.github/workflows/: ci.yml  codeql.yml  dependency-review-config.yml  dependency-review.yml  semgrep.yml  sonar.yml
F101/: Forms.py  apps.py  codeql.py  models.py  tests.py  urls.py  views.py
F101/migrations/: 0001_initial.py
mysite/: settings.py  urls.py
polls/: key.py  models.py  test_key.py  tests.py  urls.py  views.py
tes/: __init__.py  test.py
tools/local-gate/: check_max_nested.py  check_no_print.py  rules.yaml
